# fileature

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
http/: Cargo.toml
http/src/: lib.rs  style.css
