[package]
name = "fileature-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
dioxus = { version = "0.2", features = ["ssr"] }
md5 = "0.7"
rand = "0.8"
human_bytes = { version = "0.3", features = ["bibytes"] }
